--- a/Detyra6/index.html
+++ b/Detyra6/index.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Detyra6</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Detyra6</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./style/style.css" />
-    </head>
-    <body>
-        <div class="container">
-            <div class="header">
-                <h1>Cards</h1>
-                <p>We wanted cards to stand out and bring depth without
-                    changing their original structure. All of this while allowing them to 
-                    play well with the other components.
-                </p>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Cards</h1>
+        <p>
+          We wanted cards to stand out and bring depth without changing their
+          original structure. All of this while allowing them to play well with
+          the other components.
+        </p>
+      </div>
+      <div class="body">
+        <div class="cards-container">
+          <div class="card">
+            <img src="./images/1.jpg" alt="" />
+            <div class="card-text">
+              <h3>Sample Card Title</h3>
+              <p>
+                He seems sinking under the evidence could not only grieve and a
+                visit. The father is to bless and placed in his length hid...
+              </p>
+              <input type="button" value="Read More" />
             </div>
-            <div class="body">
-                <div class="cards-container">
-                    <div class="card">
-                        <img src="./images/1.jpg" alt="" />
-                        <div class="card-text">
-                            <h3>Sample Card Title</h3>
-                            <p>He seems sinking under the evidence could not only grieve and a visit. 
-                                The father is to bless and placed in his length hid...
-                            </p>
-                            <input type="button" value="Read More"/>
-                        </div>                   
-                    </div>
-                    <div class="card">
-                        <img src="./images/2.jpg" alt="">
-                        <div class="card-text">
-                            <h3>Sample Card Title</h3>
-                            <p>He seems sinking under the evidence could not only grieve and a visit. 
-                                The father is to bless and placed in his length hid...
-                            </p>
-                            <input type="button" value="Read More"/>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="./images/3.jpg" alt="">
-                        <div class="card-text">
-                            <h3>Sample Card Title</h3>
-                            <p>He seems sinking under the evidence could not only grieve and a visit. 
-                                The father is to bless and placed in his length hid...
-                            </p>
-                            <input type="button" value="Read More"/>
-                        </div>
-                    </div>                       
-                </div>
+          </div>
+          <div class="card">
+            <img src="./images/2.jpg" alt="" />
+            <div class="card-text">
+              <h3>Sample Card Title</h3>
+              <p>
+                He seems sinking under the evidence could not only grieve and a
+                visit. The father is to bless and placed in his length hid...
+              </p>
+              <input type="button" value="Read More" />
             </div>
+          </div>
+          <div class="card">
+            <img src="./images/3.jpg" alt="" />
+            <div class="card-text">
+              <h3>Sample Card Title</h3>
+              <p>
+                He seems sinking under the evidence could not only grieve and a
+                visit. The father is to bless and placed in his length hid...
+              </p>
+              <input type="button" value="Read More" />
+            </div>
+          </div>
         </div>
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
