second template added

--- a/First-Template-OnClass/index.html
+++ b/First-Template-OnClass/index.html
@@ -24,7 +24,7 @@
             <img src="/First-Template-OnClass/images/Logo.svg" alt="Logo" />
           </div>
           <div class="header-navigation">
-            <ul>
+            <ul class="header__list">
               <li><a href="#">Product</a></li>
               <li><a href="#">Costumers</a></li>
               <li><a href="#">Pricing</a></li>
@@ -39,7 +39,7 @@
       </div>
     </header>
     <main>
-      <div class="section-1 container">
+      <div class="introduction-section container">
         <div class="wrapper">
           <div class="left-side">
             <h1>The Design Thinking superpowers</h1>
@@ -59,7 +59,7 @@
           </div>
         </div>
       </div>
-      <div class="section2 container">
+      <div class="features-section container">
         <div class="wrapper">
           <h1 class="fs-36">We design tools to unveil your superpowers</h1>
           <div class="cards-wrapper">
@@ -87,7 +87,7 @@
           <button class="orange-button pb-16 font-w-600">Sign up now</button>
         </div>
       </div>
-      <div class="section3 container">
+      <div class="section-template design container">
         <div class="wrapper">
           <div class="left-side">
             <div class="title">
@@ -128,7 +128,7 @@
           </div>
         </div>
       </div>
-      <div class="section4 section3 container">
+      <div class="product section-template container">
         <div class="wrapper">
           <div class="left-side">
             <img src="./images/section4.svg" alt="Kid working on pc" />
@@ -163,7 +163,7 @@
           </div>
         </div>
       </div>
-      <div class="section5 section3 container">
+      <div class="marketers section-template container">
         <div class="wrapper">
           <div class="left-side">
             <div class="title">
