third template added

--- a/Second-Template-Homework/index.html
+++ b/Second-Template-Homework/index.html
@@ -19,10 +19,12 @@
     <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
+    <img class="arrow" id="arrow" src="images/chevron.svg" />
     <header class="header">
       <nav class="header-nav">
         <img class="header-nav__logo" src="images/Logo.svg" />
         <ul class="header-nav__list">
+          <!--header-list-->
           <li class="header-list__item"><a href="#">Home</a></li>
           <li class="header-list__item"><a href="#">About Us</a></li>
           <li class="header-list__item"><a href="#">Service</a></li>
@@ -109,6 +111,7 @@
       </div>
       <div class="contact-section">
         <div class="contact-section__wrapper">
+          <!---->
           <div class="contact-wrapper__left">
             <h4 class="wrapper-left__title">Ready to get started?</h4>
             <h4 class="wrapper-left__description">Sign up or contact us</h4>
@@ -179,5 +182,6 @@
         </div>
       </div>
     </footer>
+    <script src="javascript/app.js"></script>
   </body>
 </html>
