first personal template, initialized and header done

--- a/Third-Template-Homework/index.html
+++ b/Third-Template-Homework/index.html
@@ -8,17 +8,23 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/responsive.css" />
   </head>
   <body>
     <header class="bg-gray">
       <div class="container">
         <nav class="header-nav">
           <img class="header-nav__logo" src="/images/logo.png" />
-          <ul class="header-list">
+          <ul id="header-list" class="header-list">
             <li><a href="#">Services</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
+          <div id="hamburger" class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </nav>
       </div>
     </header>
@@ -182,7 +188,7 @@
       <section class="contact-section bg-darkblue">
         <div class="container">
           <h1>Contact Us</h1>
-          <form class="contact-form">
+          <form class="contact-form" method="POST">
             <div class="form-row">
               <label for="name">Full Name</label>
               <input type="text" placeholder="Ram Kaji" id="name" />
@@ -211,5 +217,13 @@
     <footer>
       <p>Copyright © 2018 LastDoor.Store</p>
     </footer>
+    <script>
+      var navList = document.getElementById("header-list");
+      var toggle = document.getElementById("hamburger");
+
+      toggle.addEventListener("click", function () {
+        navList.classList.toggle("active");
+      });
+    </script>
   </body>
 </html>
