some bugs fixed

--- a/Titan-PersonalTemplate-SASS/index.html
+++ b/Titan-PersonalTemplate-SASS/index.html
@@ -71,19 +71,19 @@
             <div class="presentation-content">
               <div class="presentation-info">
                 <div class="presentation-wrapper">
-                  <div class="presentation-Left">
+                  <div class="presentation-left">
                     <h2 class="presentation-left__price">$8,500</h2>
-                    <h4>Quick Booking</h4>
                   </div>
                   <div class="presentation-right">
-                    <p class="presentation-right_guests">2 x Guests</p>
-                    <p class="presentation-right_room">1 x Room</p>
-                    <h4 class="presentation-right_phone">12100</h4>
+                    <p class="presentation-right__guests">2 x Guests</p>
+                    <p class="presentation-right__room">1 x Room</p>
                   </div>
                 </div>
-                <button
-                  class="background--primary presentation-content__button"
-                >
+                <div class="presentation-bottom">
+                  <h4 class="presentation-bottom__text">Quick Booking</h4>
+                  <h4 class="presentation-bottom__phone">12100</h4>
+                </div>
+                <button class="background--primary presentation-info__button">
                   View Other Options
                 </button>
               </div>
@@ -98,6 +98,60 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="offers">
+        <div class="container">
+          <ul class="offers-Navigation">
+            <li><a class="active" href="#">Package Summery</a></li>
+            <li><a href="#">Hotel Information</a></li>
+            <li><a href="#">Rooms</a></li>
+            <li><a href="#">Facilities & Activities</a></li>
+            <li><a href="#">Dining & Entertainment</a></li>
+            <li><a href="#">Reviews</a></li>
+            <li><a href="#">Questions & Answers</a></li>
+          </ul>
+          <div class="offers-content">
+            <h2 class="offers-content__title">Package Summery</h2>
+            <div class="offers-wrapper">
+              <div class="offers-highlights">
+                <h4 class="offers-highlights__title">Package Highlights</h4>
+                <div class="offers-listwrapper">
+                  <ul>
+                    <li>Half Board/ All Inclusive</li>
+                    <li>Child Under 11 Years Stay Free</li>
+                    <li>LUX* Me Spa</li>
+                    <!-- </ul> -->
+                    <!-- <ul> -->
+                    <li>Luxurious 5-Star Hotel</li>
+                    <li>Banyan An Adult Only Zone</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="offers-details">
+                <h4 class="offers-details__title">Offer Details</h4>
+                <div class="offers-detailsContent">
+                  <div class="offers-detailsContent__description">
+                    <p>
+                      Benefit from a special discounted CHILL’OUT OFFER at Grand
+                      Hilton Hotel.
+                    </p>
+                    <span>* Valid until 30 April 2020</span>
+                  </div>
+                  <div class="offers-detailsContent__date">
+                    <p>10th March - 30th April 2020</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="packages">
+        <div class="packages-primary"></div>
+        <div class="packages-secondary"><img src="./src/images/" alt="" /></div>
+        <div class="packages-secondary"><img src="" alt="" /></div>
+        <div class="packages-secondary"><img src="" alt="" /></div>
+        <div class="packages-secondary"><img src="" alt="" /></div>
       </div>
     </main>
     <footer></footer>
