Packages added with tablet responsive

--- a/Titan-PersonalTemplate-SASS/index.html
+++ b/Titan-PersonalTemplate-SASS/index.html
@@ -147,11 +147,114 @@
         </div>
       </div>
       <div class="packages">
-        <div class="packages-primary"></div>
-        <div class="packages-secondary"><img src="./src/images/" alt="" /></div>
-        <div class="packages-secondary"><img src="" alt="" /></div>
-        <div class="packages-secondary"><img src="" alt="" /></div>
-        <div class="packages-secondary"><img src="" alt="" /></div>
+        <div class="container">
+          <div class="packages-wrapper">
+            <div class="package-card package-card--primary package-card--grid1">
+              <img src="./src/images/package1.jpg" alt="" />
+              <div class="package-info">
+                <div class="package-info__intro">
+                  <h3>Hotel Blue Haven</h3>
+                  <p>
+                    Aute quis duis excepteur excepteur ipsum cat eiusmod
+                    consectetur enim laborum magna llit. Ipsum est fugiat velit
+                    ea llamco do esse ut in veniam sun in onsequat. Aute quis
+                    duis epteur excepteur ipsum occaecat eiusmod nsectetur enim
+                    laborum magna mollit. Ipsum est fugiat velit ea ullamco do
+                  </p>
+                </div>
+                <div class="package-details">
+                  <p class="package-details__location">
+                    1749 Wheeler Ridge Delaware
+                  </p>
+                  <p class="package-details__guests">2 x Guests</p>
+                  <p class="package-details__room">1 x Room</p>
+                </div>
+                <div class="package-info__price">
+                  <h2>$8,500</h2>
+                  <button>Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div
+              class="package-card package-card--secondary package-card--grid2"
+            >
+              <img src="./src/images/package2.jpg" alt="" />
+              <div class="package-info">
+                <div class="package-info__intro">
+                  <h3>LUX* Belle Mare</h3>
+                </div>
+                <div class="package-details">
+                  <p class="package-details__location">
+                    1749 Wheeler Ridge Delaware
+                  </p>
+                  <p class="package-details__guests">2 x Guests</p>
+                  <p class="package-details__room">1 x Room</p>
+                </div>
+                <div class="package-info__price">
+                  <h2>$3,000</h2>
+                  <button>Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="package-card package-card--secondary">
+              <img src="./src/images/package3.jpg" alt="" />
+              <div class="package-info">
+                <div class="package-info__intro">
+                  <h3>White Palace</h3>
+                </div>
+                <div class="package-details">
+                  <p class="package-details__location">
+                    1749 Wheeler Ridge Delaware
+                  </p>
+                  <p class="package-details__guests">2 x Guests</p>
+                  <p class="package-details__room">1 x Room</p>
+                </div>
+                <div class="package-info__price">
+                  <h2>$9,500</h2>
+                  <button>Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="package-card package-card--secondary">
+              <img src="./src/images/package4.jpg" alt="" />
+              <div class="package-info">
+                <div class="package-info__intro">
+                  <h3>Luxury Place</h3>
+                </div>
+                <div class="package-details">
+                  <p class="package-details__location">
+                    1749 Wheeler Ridge Delaware
+                  </p>
+                  <p class="package-details__guests">2 x Guests</p>
+                  <p class="package-details__room">1 x Room</p>
+                </div>
+                <div class="package-info__price">
+                  <h2>$2,500</h2>
+                  <button>Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="package-card package-card--secondary">
+              <img src="./src/images/package5.jpg" alt="" />
+              <div class="package-info">
+                <div class="package-info__intro">
+                  <h3>Hotel Five Star</h3>
+                </div>
+                <div class="package-details">
+                  <p class="package-details__location">
+                    1749 Wheeler Ridge Delaware
+                  </p>
+                  <p class="package-details__guests">2 x Guests</p>
+                  <p class="package-details__room">1 x Room</p>
+                </div>
+                <div class="package-info__price">
+                  <h2>$3,500</h2>
+                  <button>Book Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
