--- a/Titan-PersonalTemplate-SASS/index.html
+++ b/Titan-PersonalTemplate-SASS/index.html
@@ -21,6 +21,9 @@
     <header>
       <div class="container">
         <div class="headerIntroduction">
+          <div onclick="showNav()" class="burger">
+            <span></span><span></span><span></span>
+          </div>
           <div class="headerIntroduction-brand">
             <img class="header-brand__image" src="./src/images/logo.svg" />
           </div>
@@ -31,6 +34,7 @@
                 type="text"
                 placeholder="Search Location"
               />
+              <!-- headerintroduction-input -->
               <button
                 class="headerIntroduction-form__button background--primary"
               >
@@ -55,7 +59,7 @@
       </div>
     </header>
     <main>
-      <div class="presentation">
+      <section class="presentation">
         <div class="container">
           <div class="presentation-header">
             <h2 class="presentation-header__title">Grand Hilton Hotel</h2>
@@ -98,18 +102,45 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="offers">
+      </section>
+      <section class="offers">
         <div class="container">
-          <ul class="offers-Navigation">
-            <li><a class="active" href="#">Package Summery</a></li>
-            <li><a href="#">Hotel Information</a></li>
-            <li><a href="#">Rooms</a></li>
-            <li><a href="#">Facilities & Activities</a></li>
-            <li><a href="#">Dining & Entertainment</a></li>
-            <li><a href="#">Reviews</a></li>
-            <li><a href="#">Questions & Answers</a></li>
-          </ul>
+          <div class="offers-listWrapper">
+            <img onclick="next()" id="next-btn" src="./src/images/next.png" />
+            <ul class="offers-Navigation">
+              <li id="offers-Navigation__item0">
+                <a class="active offers-Navigation__anchor" href="#"
+                  >Package Summery</a
+                >
+              </li>
+              <li id="offers-Navigation__item1">
+                <a class="offers-Navigation__anchor" href="#"
+                  >Hotel Information</a
+                >
+              </li>
+              <li id="offers-Navigation__item2">
+                <a class="offers-Navigation__anchor" href="#">Rooms</a>
+              </li>
+              <li id="offers-Navigation__item3">
+                <a class="offers-Navigation__anchor" href="#"
+                  >Facilities & Activities</a
+                >
+              </li>
+              <li id="offers-Navigation__item4">
+                <a class="offers-Navigation__anchor" href="#"
+                  >Dining & Entertainment</a
+                >
+              </li>
+              <li id="offers-Navigation__item5">
+                <a class="offers-Navigation__anchor" href="#">Reviews</a>
+              </li>
+              <li id="offers-Navigation__item6">
+                <a class="offers-Navigation__anchor" href="#"
+                  >Questions & Answers</a
+                >
+              </li>
+            </ul>
+          </div>
           <div class="offers-content">
             <h2 class="offers-content__title">Package Summery</h2>
             <div class="offers-wrapper">
@@ -145,8 +176,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="packages">
+      </section>
+      <section class="packages">
         <div class="container">
           <div class="packages-wrapper">
             <div class="package-card package-card--primary package-card--grid1">
@@ -255,10 +286,114 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="subscribe">
+        <div class="container">
+          <!-- <div class="subscribe-layer"></div> -->
+          <div class="subscribe-wrapper">
+            <div class="subscribe-wrapper__text">
+              <h2>Newsletter</h2>
+            </div>
+            <div class="subscribe-search">
+              <form class="subscribe-form" method="GET">
+                <input
+                  class="subscribe-form__input"
+                  type="text"
+                  placeholder="Search Location"
+                />
+                <button class="subscribe-form__button background--primary">
+                  Send
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="activities">
+        <div class="container">
+          <div class="activities__title">
+            <h2>Other Activities</h2>
+          </div>
+          <div class="activities-wrapper">
+            <div class="activities-card activities-card--1">
+              <p>The curious corner of chamarel</p>
+              <button>Book Now</button>
+            </div>
+            <div class="activities-card activities-card--2">
+              <p>Gymkhana club golf course</p>
+              <button>Book Now</button>
+            </div>
+            <div class="activities-card activities-card--3">
+              <p>Tamarind falls hiking trip - full day</p>
+              <button>Book Now</button>
+            </div>
+            <div class="activities-card activities-card--4">
+              <p>The blue marine discovery quest</p>
+              <button>Book Now</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="contact">
+        <div class="container">
+          <div class="contact-wrapper">
+            <form class="contact-form">
+              <h3>Send us a message</h3>
+              <div class="contact-inputs">
+                <div class="contact-inputText">
+                  <input
+                    class="contact-inputText__first"
+                    type="text"
+                    placeholder="Your Full Name*"
+                  />
+                  <input type="text" placeholder="Phone Number*" />
+                </div>
+                <textarea rows="6" placeholder="Message"></textarea>
+              </div>
+              <div class="contact-form__bottom">
+                <button>Send</button>
+                <p>* Required Fields</p>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="footer-wrapper">
+          <ul>
+            <li><a href="">Disclaimer</a></li>
+            <li><a href="">Condition of user</a></li>
+            <li><a href="">Cancellation policy</a></li>
+          </ul>
+          <img src="/src/images/footer-logos.jpg" alt="" />
+        </div>
+      </div>
+    </footer>
   </body>
   <!-- SCRIPTS -->
   <script src="dist/js/app.min.js" type="text/javascript"></script>
+  <script>
+    var counter = 0;
+    function next() {
+      window.location.href = "#last-item";
+      if (counter == 0) {
+        counter += 1;
+        window.location.href = "#offers-Navigation__item" + counter;
+      } else if (counter == 6) {
+        counter = 0;
+        window.location.href = "#offers-Navigation__item" + counter;
+      } else {
+        counter += 1;
+        window.location.href = "#offers-Navigation__item" + counter;
+      }
+    }
+
+    function showNav() {
+      document
+        .getElementsByClassName("headerNavigation-list")[0]
+        .classList.toggle("active-list");
+    }
+  </script>
 </html>
